--- a/src/static/css/projects.css
+++ b/src/static/css/projects.css
@@ -369,10 +369,14 @@ h1 {
 }
 
 .no-projects {
+    grid-column: 1 / -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 400px;
     text-align: center;
     color: #b0b0b0;
     font-size: 1.2em;
-    margin-top: 50px;
 }
 
 @media (max-width: 768px) {
