--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -18,6 +18,7 @@
             </div>
             <ul class="navbar-menu">
                 <li><a href="/projects" class="navbar-link active">Projects</a></li>
+                <li><a href="/materials" class="navbar-link">Materials</a></li>
                 <li><a href="/contacts" class="navbar-link">Contacts</a></li>
             </ul>
         </div>
