--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -16,6 +16,7 @@
             </div>
             <ul class="navbar-menu">
                 <li><a href="/projects" class="navbar-link">Projects</a></li>
+                <li><a href="/materials" class="navbar-link">Materials</a></li>
                 <li><a href="/contacts" class="navbar-link active">Contacts</a></li>
             </ul>
         </div>
