Fix: search box not displaying

--- a/src/templates/project_detail.html
+++ b/src/templates/project_detail.html
@@ -361,7 +361,7 @@
             <!-- Search Tab Content -->
             <div id="searchContent" class="tab-content">
                 <div style="margin-bottom: 20px;">
-                    <input type="text" id="materialSearch" class="tab-content" placeholder="Search materials...">
+                    <input type="text" id="materialSearch" placeholder="Search materials...">
                 </div>
                 <div id="materialsList">
                     {% for material in materials %}
