--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             
-            <button id="create-proj" class="create-btn">Create Project</button>
+            <button id="create-proj" class="create-btn">+</button>
         </div>
 
         <div id="projects-display" class="projects-grid">
