--- a/src/templates/materials.html
+++ b/src/templates/materials.html
@@ -141,7 +141,7 @@
                             <div class="tag-creation-grid">
                                 <div class="tag-creation-color-container">
                                     <label class="tag-creation-color-label">Color</label>
-                                    <input type="color" id="edit_new_tag_color" class="tag-creation-color" value="#667eea">
+                                    <input type="color" id="edit_new_tag_color" class="tag-creation-color" value="#00ff88">
                                 </div>
                                 <div class="tag-creation-button-container">
                                     <button type="button" id="edit_create-tag-btn" class="tag-create-btn">Create Tag</button>
